more FindBugs fixes